tests/ui/retry_missing_should_retry.stderr
error: custom attribute panicked
  --> tests/ui/retry_missing_should_retry.rs:17:1
   |
17 | #[retry(BACKOFF_CONFIG)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: should_retry test must be supplied as the second argument to #[retry(...)]
